# games_on_modular_networks

./: .gitignore  CMakeLists.txt  README.md  config.txt  create_config.py  gml_graph.conf
src/: games_on_graphs  games_on_graphs.cpp  simulation.cpp  simulation.h
